<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneDialerActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:inputType="phone" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="5"
        android:rowCount="3"
        android:useDefaultMargins="true">

        <ImageButton
            android:id="@+id/delete_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:src="@drawable/backspace" />

        <Button
            android:id="@+id/number_1_button"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/_1" />


        <Button
            android:id="@+id/number_2_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/number_3_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/_3" />

        <Button
            android:id="@+id/number_4_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/_4"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/number_5_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="4"
            android:text="@string/_5"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/number_6_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/_6"
            tools:layout_editor_absoluteX="286dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/number_7_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/_7"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/number_8_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/_8"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="431dp" />

        <Button
            android:id="@+id/number_9_button"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/_9"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="524dp" />

        <Button
            android:id="@+id/star_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/star"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="524dp" />

        <Button
            android:id="@+id/pound_button"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/pound"
            tools:layout_editor_absoluteX="286dp"
            tools:layout_editor_absoluteY="524dp" />

        <Button
            android:id="@+id/number_0_button"
            android:layout_width="50dp"
            android:layout_height="47dp"
            android:layout_row="1"
            android:layout_column="4"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/call_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@drawable/call" />

        <ImageButton
            android:id="@+id/drop_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:src="@drawable/hangup" />

    </GridLayout>
</LinearLayout>